// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttributeFilterHandler > hiddenElements option should hide element in getAllElements() 1`] = `
[
  {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
  {
    "title": "TouchAll",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
  },
]
`;

exports[`AttributeFilterHandler > hiddenElements option should work properly with loadNextElementsPage() call 1`] = `
[
  {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
]
`;
